[package]
name = "chess-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chess-api"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"

env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "0.99.17"

uuid = { version = "1.2.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs,
    "serde"
] }
actix-cors = "0.6.4"
dotenv = "0.15.0"
